--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,13 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.6",
+    "@angular-devkit/build-angular": "^14.1.0",
     "@angular/cli": "~13.3.6",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
